nav end header media mobile some chages added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,40 @@
                 <a href="#">Get in Touch</a>
             </div>
         </main>
+
+        <main class="container main_header_end">
+            <h1>How we make brands thrive</h1>
+            <hr>
+            <div class="main_header_end_box">
+                <div class="end-box-card">
+                    <div class="card-box-image">
+                        <img src="./images/card_box_img.png" alt="">
+                    </div>
+                    <h1>SET a target</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+                    </p>
+                </div>
+                <div class="end-box-card">
+                    <div class="card-box-image">
+                        <img src="./images/card_box_img2.png" alt="">
+                    </div>
+                    <h1>design a solution</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+                    </p>
+                </div>
+                <div class="end-box-card">
+                    <div class="card-box-image">
+                        <img src="./images/card_box_img3.png" alt="">
+                    </div>
+                    <h1>track the progress</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+                    </p>
+                </div>
+            </div>
+        </main>
     </header>
 </body>
 </html>
