main cards and all media some chages added

--- a/index.html
+++ b/index.html
@@ -87,5 +87,77 @@
             </div>
         </main>
     </header>
+
+    <main>
+        <main class="container main-box">
+            <h1>Recent projects</h1>
+            <hr>
+            <div class="main-box-down">
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main-card1.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/./main.card2.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main.card3.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main.card4.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main.card5.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main-card6.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main-card7.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main-card8.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+                <div class="main-box-down-card">
+                    <div class="card-img">
+                        <img src="./images/main-card9.jpg" alt="">
+                    </div>
+                    <h1>woods</h1>
+                    <p>Photography</p>
+                </div>              
+            </div>
+        </main>
+    </main>
 </body>
 </html>
